--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,21 @@
-html,
-body {
+html,body,h1,h2,h3,p{
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.main{
+  width: 1000px;
+  margin: 0 auto;
+  margin-bottom: 40px;
 }
 
-* {
-  box-sizing: border-box;
+.title{
+  margin-bottom: 20px;
+}
+.publishedAt{
+  margin-bottom: 20px;
+}
+.post > p{
+  line-height: 1.8;
+  letter-spacing: 0.2px;
 }
